--- a/_includes/nav-footer.html
+++ b/_includes/nav-footer.html
@@ -10,7 +10,7 @@
       {% endif %}
 
       <li class="item  item--nav{% if item.url == page.url %}  item--current{% endif %}">
-        <a href="{{ url }}">{{ item.title }}</a>
+        <a style="font-size:15px;" href="{{ url }}">{{ item.title }}</a>
       </li>
     {% endfor %}
   </ul>
