--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,8 @@
       <link rel="stylesheet" href="{{ "/assets/styles.css" | relative_url }}">
     {% endif %}
 
-    {% if site.favicons or site.avatarurl %}{% include site-favicons.html %}{% endif %}
+    <!--remove logo on page tab-->
+    <!--{% if site.favicons or site.avatarurl %}{% include site-favicons.html %}{% endif %}-->
 
     {% if site.google_analytics %}{% include site-analytics.html %}{% endif %}
 
