--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -15,25 +15,29 @@ $white: #ffffff !default;
 
 // Typography
 $bodytype: (
-  font-family: "Georgia, serif",
+  font-family: "Montserrat",
   regular: 400,
-  bold: 700,
+  //bold: 700,
   italic: italic,
   cap-height: 0.75
 ) !default;
 
 $headingtype: (
-  font-family: '"Merriweather", serif',
+  font-family: "Montserrat",
   regular: 400,
   bold: 700,
   cap-height: 0.75
 ) !default;
 
 $monospacetype: (
-  font-family: "Menlo, monospace",
+  font-family: "Montserrat",
   regular: 400,
   cap-height: 0.68
 ) !default;
 
 // Font import, if you're using a non-standard web font
 @import url("https://fonts.googleapis.com/css?family=Merriweather:400,700");
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic,700italic&subset=latin,latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&subset=latin,latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i");
+
