--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -137,7 +137,7 @@ body {
 
 .content {
   @include breakpoint(break-1) {
-    width: 62%;
+    width: 100%;
   }
 }
 
@@ -226,6 +226,9 @@ img {
 }
 
 .figure {
+
+  margin-top: 1.5em;
+
   line-height: 0;
   &--left {
     float: left;
